Incluí el Hover a los discos, y modifiqué el estilo de las leyendas

--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,24 @@ p {
 /***********************   BIOGRAFIA.HTML   ************************/
 /*******************************************************************/
 
+.discoHover:hover {
+    -webkit-transform: scale(1.05);
+    transform: scale(1.05);
+    transition: .6s;
+}
+
+.discoNegrita {
+    font-weight: bold;
+}
+
+.discoItalic {
+    font-style: italic;
+}
+
+/*******************************************************************/
+/***********************   BIOGRAFIA.HTML   ************************/
+/*******************************************************************/
+
 .banner {
     min-width: 100%;
     min-height: 50px;
