Último commit antes de la 2da entrega

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ p {
 }
 
 /*******************************************************************/
-/***********************   BIOGRAFIA.HTML   ************************/
+/*************************   DISCOS.HTML   *************************/
 /*******************************************************************/
 
 .discoHover:hover {
