Dividí el scss en pequeños scss y los importé al scss primario

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* Importo todos los _scss asociados al proyecto */
 /*******************************************************************/
 /**************************   CSS RESET   **************************/
 /*******************************************************************/
@@ -20,7 +21,6 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: bisque;
 }
-
 body::before {
   content: "";
   background-image: url("../img/fondo_contacto.jpg");
@@ -112,7 +112,6 @@ h3 {
     font-size: small;
   }
 }
-
 /*******************************************************************/
 /*************************   DISCOS.HTML   *************************/
 /*******************************************************************/
