Creé el _variables.scss

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,7 @@
 /* Importo todos los _scss asociados al proyecto */
 
 @import "_reset";
+@import "_variables";
 @import "_general";
 @import "_index";
 @import "_ultimo_disco";
