--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,13 @@
 /*******************************************************************/
 /************************   VARIABLES.HTML   ***********************/
 /*******************************************************************/
+
+$title-color: aliceblue;
+
+$title-bg: linear-gradient(90deg, bisque, rgb(14, 15, 50), rgb(14, 15, 50), bisque);
+
+$subtitle-color: rgb(0, 0, 0);
+
+$subtitle-bg: linear-gradient(90deg, bisque, rgb(145, 148, 252), rgb(145, 148, 252), bisque);
+
+$title-align: center;
