--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,9 @@
 }
 
 /*******************************************************************/
+/************************   VARIABLES.HTML   ***********************/
+/*******************************************************************/
+/*******************************************************************/
 /***************************   GENERAL   ***************************/
 /*******************************************************************/
 /* BODY */
