--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,12 +2,26 @@
 /************************   VARIABLES.HTML   ***********************/
 /*******************************************************************/
 
+/* GENERAL */
+
 $title-color: aliceblue;
 
 $title-bg: linear-gradient(90deg, bisque, rgb(14, 15, 50), rgb(14, 15, 50), bisque);
+
+$title-uppercase: uppercase;
 
 $subtitle-color: rgb(0, 0, 0);
 
 $subtitle-bg: linear-gradient(90deg, bisque, rgb(145, 148, 252), rgb(145, 148, 252), bisque);
 
 $title-align: center;
+
+$title-bold: bold;
+
+$button-font: cursive;
+
+$button-font-size: large;
+
+/* CONTACTO */
+
+$form-bold: bold;
