--- a/scss/_proximos_shows.scss
+++ b/scss/_proximos_shows.scss
@@ -21,3 +21,18 @@
         font-size: small;
     }
 }
+
+/* Botones de compra de entradas */
+
+.showsModalHeader {
+    background-color: rgb(137, 152, 177);
+
+    h2 {
+        font-weight: bold;
+    }
+}
+
+.showsModalBody,
+.showsModalFooter {
+    background-color: rgb(240, 242, 245);
+}
