--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,7 @@ h3 {
 
 .discosMargin {
   margin-bottom: 5px;
+  cursor: pointer;
 }
 
 .discosBold {
@@ -170,11 +171,27 @@ h3 {
 
 .discosModalHeader h2 {
   font-weight: bold;
+  font-size: large;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
-.discosModalBody,
+.discosModalBody {
+  background-color: rgb(240, 240, 245);
+}
+
+.discosModalBody ol li {
+  font-size: large;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
+  font-style: italic;
+}
+
 .discosModalFooter {
-  background-color: rgb(240, 242, 245);
+  background-color: rgb(202, 209, 222);
+}
+
+.discosModalFooter button {
+  font-size: large;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 /*******************************************************************/
