Borré un border que había puesto de prueba

--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -76,6 +76,7 @@
         font-size: 16px;
         font-weight: bold;
         color: rgb(0, 0, 0);
+        background-color: rgb(255, 255, 255, 0.1);
 
         &::before {
             content: "";
@@ -141,7 +142,6 @@
 
 @media (max-width: 400px) {
     .formContacto {
-        border: 1px solid red;
         min-width: 300px;
     }
 }
