--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 /* Importo todos los _scss asociados al proyecto */
 /*******************************************************************/
 /**************************   CSS RESET   **************************/
@@ -28,7 +27,6 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: bisque;
 }
-
 body::before {
   content: "";
   background-image: url("../img/fondo_contacto.jpg");
@@ -129,12 +127,10 @@ h3 {
     font-size: small;
   }
 }
-
 /* Botones de compra de entradas */
 .showsModalHeader {
   background-color: rgb(137, 152, 177);
 }
-
 .showsModalHeader h2 {
   font-weight: bold;
 }
@@ -170,7 +166,6 @@ h3 {
 .discosModalHeader {
   background-color: rgb(137, 152, 177);
 }
-
 .discosModalHeader h2 {
   font-weight: bold;
   font-size: large;
@@ -181,7 +176,6 @@ h3 {
   background-color: rgb(240, 240, 245);
   max-height: 500px;
 }
-
 .discosModalBody ol li {
   font-size: large;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -191,7 +185,6 @@ h3 {
 .discosModalFooter {
   background-color: rgb(202, 209, 222);
 }
-
 .discosModalFooter button {
   font-size: large;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -229,7 +222,6 @@ h3 {
   align-items: center;
   justify-content: center;
 }
-
 .contactoFlexContainer::before {
   content: "";
   background-size: cover;
@@ -249,7 +241,6 @@ h3 {
   width: 800px;
   position: relative;
 }
-
 .formContacto::before {
   content: "";
   background-image: url("../img/fondo_contacto2.jpg");
@@ -274,7 +265,6 @@ h3 {
   align-items: center;
   margin: 20px;
 }
-
 .formDiv label {
   position: relative;
   /*     border: 1px solid red; */
@@ -284,8 +274,8 @@ h3 {
   font-size: 16px;
   font-weight: bold;
   color: rgb(0, 0, 0);
+  background-color: rgba(255, 255, 255, 0.1);
 }
-
 .formDiv label::before {
   content: "";
   background-color: rgb(255, 255, 255);
@@ -298,7 +288,6 @@ h3 {
   left: 0px;
   opacity: 0.2;
 }
-
 .formDiv input {
   /*     border: 1px solid red; */
   height: 35px;
@@ -306,7 +295,6 @@ h3 {
   flex-grow: 1;
   font-size: 16px;
 }
-
 .formDiv textarea {
   /*     border: 1px solid red; */
   max-width: 600px;
@@ -322,7 +310,6 @@ h3 {
   justify-content: space-evenly;
   margin: 20px;
 }
-
 .formBotton button {
   border: 2px solid rgb(255, 255, 255);
   height: 35px;
@@ -346,7 +333,6 @@ h3 {
 /* Media Queries - Contacto */
 @media (max-width: 400px) {
   .formContacto {
-    border: 1px solid red;
     min-width: 300px;
   }
 }
