--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ h3 {
   right: 0px;
   bottom: 0px;
   left: 0px;
-  opacity: 0.5;
+  opacity: 0.6;
   border: 2px solid rgb(255, 255, 255);
   border-radius: 5px;
 }
@@ -270,11 +270,12 @@ h3 {
   /*     border: 1px solid red; */
   height: 25px;
   width: 180px;
+  padding-left: 3px;
   flex-grow: 1;
   font-size: 16px;
   font-weight: bold;
   color: rgb(0, 0, 0);
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: rgba(255, 255, 255, 0.2);
 }
 .formDiv label::before {
   content: "";
