--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -50,7 +50,7 @@
         right: 0px;
         bottom: 0px;
         left: 0px;
-        opacity: 0.5;
+        opacity: 0.6;
         border: 2px solid rgb(255, 255, 255);
         border-radius: 5px;
     }
@@ -72,11 +72,12 @@
         /*     border: 1px solid red; */
         height: 25px;
         width: 180px;
+        padding-left: 3px;
         flex-grow: 1;
         font-size: 16px;
         font-weight: bold;
         color: rgb(0, 0, 0);
-        background-color: rgb(255, 255, 255, 0.1);
+        background-color: rgb(255, 255, 255, 0.2);
 
         &::before {
             content: "";
