--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -70,9 +70,10 @@
         position: relative;
 
         /*     border: 1px solid red; */
-        height: 25px;
+        height: 34px;
         width: 180px;
         padding-left: 3px;
+        padding-top: 5px;
         flex-grow: 1;
         font-size: 16px;
         font-weight: bold;
