Se renombró la carpeta html a pages, cambiamos los guiones bajos de los archivos utilizados por guiones medios, y cambié el lang del sistema de en a es

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-
 /* Importo todos los _scss asociados al proyecto */
 /*******************************************************************/
 /**************************   CSS RESET   **************************/
@@ -28,10 +27,9 @@ body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-color: bisque;
 }
-
 body::before {
   content: "";
-  background-image: url("../img/fondo_contacto.jpg");
+  background-image: url("../img/fondo-contacto.jpg");
   background-size: cover;
   position: fixed;
   background-position: center;
@@ -92,7 +90,7 @@ h3 {
 }
 
 /*******************************************************************/
-/**********************   ULTIMO_DISCO.HTML   **********************/
+/**********************   ULTIMO-DISCO.HTML   **********************/
 /*******************************************************************/
 .ultimoDiscoParrafo {
   text-align: justify;
@@ -129,12 +127,10 @@ h3 {
     font-size: small;
   }
 }
-
 /* Botones de compra de entradas */
 .showsModalHeader {
   background-color: rgb(137, 152, 177);
 }
-
 .showsModalHeader h2 {
   font-weight: bold;
 }
@@ -170,7 +166,6 @@ h3 {
 .discosModalHeader {
   background-color: rgb(137, 152, 177);
 }
-
 .discosModalHeader h2 {
   font-weight: bold;
   font-size: large;
@@ -181,7 +176,6 @@ h3 {
   background-color: rgb(240, 240, 245);
   max-height: 500px;
 }
-
 .discosModalBody ol li {
   font-size: large;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -191,7 +185,6 @@ h3 {
 .discosModalFooter {
   background-color: rgb(202, 209, 222);
 }
-
 .discosModalFooter button {
   font-size: large;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
@@ -229,7 +222,6 @@ h3 {
   align-items: center;
   justify-content: center;
 }
-
 .contactoFlexContainer::before {
   content: "";
   background-size: cover;
@@ -249,10 +241,9 @@ h3 {
   width: 800px;
   position: relative;
 }
-
 .formContacto::before {
   content: "";
-  background-image: url("../img/fondo_contacto2.jpg");
+  background-image: url("../img/fondo-contacto2.jpg");
   background-size: cover;
   position: absolute;
   background-position: center;
@@ -274,7 +265,6 @@ h3 {
   align-items: center;
   margin: 20px;
 }
-
 .formDiv label {
   position: relative;
   /*     border: 1px solid red; */
@@ -288,7 +278,6 @@ h3 {
   color: rgb(0, 0, 0);
   background-color: rgba(255, 255, 255, 0.2);
 }
-
 .formDiv label::before {
   content: "";
   background-color: rgb(255, 255, 255);
@@ -301,7 +290,6 @@ h3 {
   left: 0px;
   opacity: 0.2;
 }
-
 .formDiv input {
   /*     border: 1px solid red; */
   height: 35px;
@@ -309,7 +297,6 @@ h3 {
   flex-grow: 1;
   font-size: 16px;
 }
-
 .formDiv textarea {
   /*     border: 1px solid red; */
   max-width: 600px;
@@ -325,7 +312,6 @@ h3 {
   justify-content: space-evenly;
   margin: 20px;
 }
-
 .formBotton button {
   border: 2px solid rgb(255, 255, 255);
   height: 35px;
