--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -42,7 +42,7 @@
 
     &::before {
         content: "";
-        background-image: url('../img/fondo_contacto2.jpg');
+        background-image: url('../img/fondo-contacto2.jpg');
         background-size: cover;
         position: absolute;
         background-position: center;
