--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -7,7 +7,7 @@
 body {
     &::before {
         content: "";
-        background-image: url('../img/fondo_contacto.jpg');
+        background-image: url('../img/fondo-contacto.jpg');
         background-size: cover;
         position: fixed;
         background-position: center;
