--- a/scss/_ultimo-disco.scss
+++ b/scss/_ultimo-disco.scss
@@ -1,5 +1,5 @@
 /*******************************************************************/
-/**********************   ULTIMO_DISCO.HTML   **********************/
+/**********************   ULTIMO-DISCO.HTML   **********************/
 /*******************************************************************/
 
 .ultimoDiscoParrafo {
