--- a/scss/style.scss
+++ b/scss/style.scss
@@ -4,8 +4,8 @@
 @import "_variables";
 @import "_general";
 @import "_index";
-@import "_ultimo_disco";
-@import "_proximos_shows";
+@import "_ultimo-disco";
+@import "_proximos-shows";
 @import "_discos";
 @import "_biografia";
 @import "_contacto";
