Reemplacé las imágenes de las redes sociales con el uso de font awesome

--- a/css/style.css
+++ b/css/style.css
@@ -78,7 +78,9 @@ h3 {
 
 /* FOOTER */
 .redSocial {
-  width: 30px;
+  width: 28px;
+  height: 16px;
+  color: #ffffff;
 }
 
 /*******************************************************************/
@@ -354,6 +356,9 @@ h3 {
   border-radius: 5px;
 }
 
+/*******************************************************************/
+/************************   MEDIA QUERIES   ************************/
+/*******************************************************************/
 /*******************************************************************/
 /************************   CONTACTO.HTML   ************************/
 /*******************************************************************/
