--- a/scss/_medias-queries.scss
+++ b/scss/_medias-queries.scss
@@ -1,4 +1,8 @@
 /*******************************************************************/
+/************************   MEDIA QUERIES   ************************/
+/*******************************************************************/
+
+/*******************************************************************/
 /************************   CONTACTO.HTML   ************************/
 /*******************************************************************/
 
